@@ -1,7 +1,7 @@
 ;;; nethack.el -- run Nethack as an inferior process in Emacs
 ;;; Author: Ryan Yeske (rcyeske@vcn.bc.ca)
 ;;; Date: Sat Mar 18 11:31:52 2000
-;;; $Id: nethack.el,v 1.48 2001/12/19 12:50:00 sabetts Exp $
+;;; $Id: nethack.el,v 1.49 2001/12/20 11:28:53 sabetts Exp $
 ;;; Requires: a copy of Nethack 3.3.x with the lisp window port
 
 ;;; Commentary:
@@ -184,6 +184,12 @@
   "nethack white"
   :group 'nethack-faces)
 
+(defface nethack-map-glyph-face 
+  `((t (:font "6x10")))
+  "nethack map face for keeping glyphs from 'seperating' due to the
+newlines being in a font with height > 16."
+  :group 'nethack-faces-faces)
+
 (defvar nethack-use-glyphs (display-images-p)
   "If set to T, nethack will use XPMs to draw glyphs.")
 
@@ -328,6 +334,7 @@ position if we are looking at a prompt."
 
 (defvar nethack-map-width 79 "Max width of the map.")
 (defvar nethack-map-height 22 "Max height of the map.")
+
 
 ;;; status line handling
 
